[package]
name = "tower-redis-cell"
version = "0.2.0"
edition = "2024"
authors = ["Pavel Mikhalkevich <pavel@mikhalkevich.com>"]
license = "MIT OR Apache-2.0"
description = "Rust bindings for the Redis Cell module"
repository = "https://github.com/rustworthy/tower-redis-cell.git"
keywords = ["Tower", "Redis", "Redis-Cell", "GCRA", "Rate-Limit"]
categories = ["network-programming", "web-programming"]
exclude = [
  ".github",
  "redis.Dockerfile",
  "valkey.Dockerfile",
  ".gitignore",
  "Makefile",
]

[features]
default = ["tokio-comp"]
tokio-comp = ["redis/tokio-comp"]
deadpool = ["dep:deadpool-redis"]
uuid = ["redis-cell-rs/uuid"]

[dependencies]
tower = "0.5.2"
thiserror = "2.0.17"
redis = { version = "0.32.7", features = ["aio"] }
redis-cell-rs = "0.2.0"

# optional dependencies
deadpool-redis = { version = "0.22.0", optional = true }

[dev-dependencies]
redis = { version = "0.32.7", features = ["connection-manager", "tokio-comp"] }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
axum = "0.8.6"
testcontainers = { version = "0.25.0", features = ["reusable-containers"] }
tokio = { version = "1.48.0", features = ["macros"] }
tracing = "0.1.41"

# to make -Zminimal-versions work
[target.'cfg(any())'.dependencies]
# https://github.com/dtolnay/async-trait/releases/tag/0.1.43
async-trait = { version = "0.1.43", optional = true }

# added conversion from `Bytes` to `BytesMut`
# https://github.com/tokio-rs/bytes/releases/tag/v1.7.0
bytes = { version = "1.7.0", optional = true }

# https://github.com/rust-lang-nursery/lazy-static.rs/releases/tag/1.0.2
lazy_static = { version = "1.0.2", optional = true }

# https://github.com/dtolnay/serde-repr/compare/0.1.4...0.1.5
serde_repr = { version = "0.1.5", optional = true }
