[package]
name = "tower-rate-limit"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1.3.1"
redis = "0.32.7"
redis-cell-rs = { path = "../redis-cell" }
tower = "0.5.2"

[dev-dependencies]
deadpool-redis = "0.22.0"
hyper = { version = "0.14", features = ["full"] }
testcontainers = { version = "0.25.0", features = ["reusable-containers"] }
tokio = { version = "1.48.0", features = ["macros"] }
