[package]
name = "tower-rate-limit"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1.3.1"
redis = "0.32.7"
redis-cell-rs = { path = "../redis-cell" }
thiserror = "2.0.17"
tower = "0.5.2"

[dev-dependencies]
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
axum = "0.8.6"
deadpool-redis = "0.22.0"
testcontainers = { version = "0.25.0", features = ["reusable-containers"] }
tokio = { version = "1.48.0", features = ["macros"] }
tracing = "0.1.41"
